[package]
name = "gqlmapi-rs"
version = "0.7.0"
edition = "2018"
description = "Rust bindings for https://github.com/microsoft/gqlmapi"
repository = "https://github.com/wravery/gqlmapi-rs"
license = "MIT"
keywords = ["MAPI", "GraphQL", "gqlmapi"]
categories = ["os::windows-apis"]

[dependencies]
cxx = "1.0.60"

[dependencies.windows]
version = "0.29.0"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
cmake = "0.1.46"
cxx-build = "1.0.60"

[dev-dependencies]
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"