[package]
name = "gqlmapi-rs"
version = "0.13.0"
edition = "2021"
description = "Rust bindings for https://github.com/microsoft/gqlmapi"
repository = "https://github.com/wravery/gqlmapi-rs"
license = "MIT"
keywords = ["MAPI", "GraphQL", "gqlmapi"]
categories = ["os::windows-apis"]

[dependencies]
cxx = "1.0.107"
serde = "1.0.188"
serde_json = { version = "1.0.105", features = ["preserve_order"] }

[dependencies.windows]
version = "0.51.1"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
cmake = "0.1.50"
cxx-build = "1.0.107"

[dev-dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"